# typeseek

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: Dockerfile  auth.go  auth_test.go  config.go  config_test.go  cors.go  cors_test.go  db.go  go.mod  go.sum  handlers.go  handlers_test.go  main.go  models.go  sidecar.go
ingestion/: catalog.py  config.py  detect_regions.py  download_fonts.py  embed.py  enrich_descriptions.py  fetch_fonts.py  http.py  logging_setup.py  models.py  render_specimens.py  sanity_check.py  upload_specimens.py  util.py
ingestion/db/: loader.py  recenter_embeddings.py  schema.sql
ingestion/tests/: test_detect_regions.py  test_models.py
sidecar/: Dockerfile  main.py
sidecar/tests/: test_main.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  Home.tsx  Search.tsx  index.css  main.tsx  test-setup.ts
web/src/api/: auth.ts  client.ts  http.ts  types.ts
web/src/components/: AuthWidget.tsx  DetailPanel.tsx  DetailPanelSkeleton.tsx  DropZone.tsx  EmptyState.tsx  FontCard.test.tsx  FontCard.tsx  Footer.tsx  LicenseFilter.tsx  RegionChip.tsx  ResultGrid.tsx  SearchEmptyState.tsx  SearchField.test.tsx  SearchField.tsx  SkeletonList.tsx  StateMessage.tsx  ThemeToggle.tsx  icons.tsx
web/src/hooks/: useAuth.ts  useDelayedFlag.test.ts  useDelayedFlag.ts  useDelayedUnmount.test.ts  useDelayedUnmount.ts  useElementHeight.ts  useGoogleFonts.test.ts  useGoogleFonts.ts  useLocomotiveScroll.ts  useTheme.test.ts  (+1 more)
(+1 files in other folders)
